{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 6,
  "lineage": "7b988364-518e-1ecf-71dd-f33f19583e4e",
  "resources": [
    {
      "module": "module.eks_managed_nodes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:security-group/sg-02f5ad4875e474ac2",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-02f5ad4875e474ac2",
            "ingress": [],
            "name": "eks_nodes_sergio",
            "name_prefix": "",
            "owner_id": "937468789323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_sergio",
              "module": "eks_managed_nodes",
              "module_version": "1.0.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e907bf8376063eb1"
          }
        }
      ]
    },
    {
      "module": "module.eks_managed_nodes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3240109024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f5ad4875e474ac2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_managed_nodes.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_managed_nodes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-583655695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f5ad4875e474ac2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_managed_nodes.aws_security_group.eks_nodes"
          ]
        }
      ]
    }
  ]
}